@@ -1,4 +1,4 @@
-.\" $Id: tmux.1,v 1.66 2009-01-17 17:16:31 nicm Exp $
+.\" $Id: tmux.1,v 1.67 2009-01-19 17:16:09 nicm Exp $
 .\"
 .\" Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -345,6 +345,11 @@ Create a new client in the current terminal and attach it to a session.
 If
 .Fl d
 is specified, any other clients attached to the session are detached.
+.Pp
+If no server is started,
+.It attach-session
+will attempt to start it; this will fail unless sessions are created in the
+configuration file.
 .It Xo Ic bind-key
 .Ar key Ar command Op Ar arguments
 .Xc
